trying to resolve scrolling on mobile issues

--- a/css/main.css
+++ b/css/main.css
@@ -20,3 +20,9 @@ li:hover a{
     padding-bottom: 136px;
     padding-top: 16px;
 }
+img{
+    border-radius: 8px;
+}
+.imgMargin{
+    margin: 20px;
+}
